# WellActually-AI

./: .gitignore  CLAUDE.md  README.md  \  pyproject.toml  roadmap.md  wellactually_specs.md
src/wellactually/: __init__.py  main.py
src/wellactually/cores/: __init__.py
src/wellactually/cores/analysis/: __init__.py
src/wellactually/cores/analysis/rules/: base.py  complexity_rule.py  god_class_rule.py  srp_rule.py
src/wellactually/cores/analysis/rules/srp/: dependency_analyzer.py  method_analyzer.py  semantic_analyzer.py  srp_scorer.py
src/wellactually/cores/cli/: app.py
src/wellactually/cores/inference/: __init__.py  facade.py  ollama_client.py
src/wellactually/cores/io/: __init__.py  doctor.py  facade.py  types.py  watcher.py
src/wellactually/cores/orchestration/: __init__.py  output.py  workflows.py
src/wellactually/cores/persistence/: __init__.py  cache.py  facade.py  lance_manager.py  schemas.py  vectorizer.py
src/wellactually/cores/structure/: __init__.py  facade.py  queries.py  scanner.py
src/wellactually/cores/structure/graph/: __init__.py  kuzu_manager.py  schema.py
src/wellactually/cores/structure/parsers/: __init__.py  base.py  python_parser.py
